# relay-chain-template

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: cli.rs  command.rs  error.rs  host_perf_check.rs
node/client/: Cargo.toml
node/client/src/: lib.rs
node/core/dispute-coordinator/src/: tests.rs
node/core/dispute-coordinator/src/db/: v1.rs
node/core/provisioner/src/: metrics.rs
node/core/pvf/: Cargo.toml
node/malus/: Cargo.toml
node/network/collator-protocol/src/validator_side/: mod.rs
node/network/gossip-support/src/: lib.rs
node/network/protocol/src/request_response/: mod.rs
node/primitives/: Cargo.toml
node/primitives/src/: lib.rs
node/service/: Cargo.toml
node/service/src/: chain_spec.rs  grandpa_support.rs  lib.rs  relay_chain_selection.rs  tests.rs
node/test/client/: Cargo.toml
node/test/client/src/: block_builder.rs  lib.rs
node/test/performance-test/: Cargo.toml
node/test/performance-test/src/: gen_ref_constants.rs  lib.rs
node/test/service/: Cargo.toml
node/test/service/src/: chain_spec.rs  lib.rs
node/test/service/tests/: build-blocks.rs  call-function.rs
parachain/test-parachains/adder/collator/: Cargo.toml
parachain/test-parachains/undying/collator/: Cargo.toml
rpc/: Cargo.toml
runtime/common/src/: assigned_slots.rs  lib.rs
runtime/metrics/: Cargo.toml
runtime/parachains/src/paras_inherent/: benchmarking.rs
runtime/polkadot/: Cargo.toml
runtime/polkadot/constants/: Cargo.toml
runtime/relay-template/: Cargo.toml
runtime/relay-template/constants/: Cargo.toml
runtime/relay-template/constants/src/weights/: block_weights.rs  extrinsic_weights.rs  paritydb_weights.rs  rocksdb_weights.rs
runtime/relay-template/src/: lib.rs
runtime/relay-template/src/weights/: frame_benchmarking_baseline.rs  frame_election_provider_support.rs  frame_system.rs  pallet_bags_list.rs  pallet_balances.rs  pallet_bounties.rs  pallet_child_bounties.rs  pallet_collective_council.rs  pallet_collective_technical_committee.rs  pallet_democracy.rs  pallet_election_provider_multi_phase.rs  pallet_elections_phragmen.rs  pallet_identity.rs  pallet_im_online.rs  pallet_indices.rs  pallet_membership.rs  pallet_multisig.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_session.rs  pallet_staking.rs  pallet_timestamp.rs  pallet_tips.rs  pallet_treasury.rs  pallet_utility.rs  pallet_vesting.rs  runtime_common_auctions.rs  runtime_common_claims.rs  runtime_common_crowdloan.rs  runtime_common_paras_registrar.rs  runtime_common_slots.rs  runtime_parachains_configuration.rs  runtime_parachains_disputes.rs  runtime_parachains_initializer.rs  runtime_parachains_paras.rs  runtime_parachains_paras_inherent.rs
runtime/test-runtime/: Cargo.toml
runtime/test-runtime/constants/: Cargo.toml
runtime/test-runtime/src/: lib.rs
scripts/: run_all_benches.sh
scripts/ci/common/: lib.sh
scripts/ci/github/: generate_release_text.rb  polkadot_release.erb
scripts/ci/gitlab/: check_extrinsics_ordering.sh  check_runtime.sh  lingua.dic  test_deterministic_wasm.sh
src/: main.rs
tests/: benchmark_block_works.rs  benchmark_overhead_works.rs
utils/generate-bags/: Cargo.toml
utils/generate-bags/src/: main.rs
utils/remote-ext-tests/bags-list/: Cargo.toml
utils/remote-ext-tests/bags-list/src/: main.rs
utils/staking-miner/: Cargo.toml
utils/staking-miner/src/: emergency_solution.rs  main.rs  monitor.rs
xcm/pallet-xcm-benchmarks/: Cargo.toml
xcm/src/v0/: junction.rs
