[package]
name = "relay-template-cli"
version = "0.9.26"
authors = ["Fenn Saji <fennsaji@gmail.com>"]
description = "Polkadot Relay-chain Client Node"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "3.1", features = ["derive"], optional = true }
log = "0.4.17"
thiserror = "1.0.31"
futures = "0.3.21"
pyro = { package = "pyroscope", version = "0.3.1", optional = true }

service = { package = "relay-template-service", path = "../node/service", default-features = false, optional = true }
relay-template-client = { path = "../node/client", optional = true }
polkadot-node-core-pvf = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
relay-template-performance-test = { path = "../node/test/performance-test", optional = true }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.26" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.26" }
sc-cli = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.26" }
sc-service = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.26" }
polkadot-node-metrics = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26" }
sc-tracing = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.26" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }

# this crate is used only to enable `trie-memory-tracker` feature
# see https://github.com/paritytech/substrate/pull/6745
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }

[features]
default = ["wasmtime", "db", "cli", "full-node", "trie-memory-tracker", "polkadot-native"]
wasmtime = ["sc-cli/wasmtime"]
db = ["service/db"]
cli = [
	"clap",
	"sc-cli",
	"sc-service",
	"sc-tracing",
	"frame-benchmarking-cli",
	"try-runtime-cli",
	"relay-template-client",
	"polkadot-node-core-pvf",
	"relay-template-performance-test",
]
runtime-benchmarks = ["service/runtime-benchmarks", "polkadot-node-metrics/runtime-benchmarks"]
trie-memory-tracker = ["sp-trie/memory-tracker"]
full-node = ["service/full-node"]
try-runtime = ["service/try-runtime"]
fast-runtime = ["service/fast-runtime"]
pyroscope = ["pyro"]

# Configure the native runtimes to use. Polkadot is enabled by default.
#
# Validators require the native runtime currently
polkadot-native = ["service/polkadot-native"]

malus = ["full-node", "service/malus"]
runtime-metrics = ["service/runtime-metrics", "polkadot-node-metrics/runtime-metrics"]
staging-client = ["service/staging-client"]
