[package]
name = "relay-template-service"
version = "0.9.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
# Substrate Client
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
beefy-gadget = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.26" }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }

# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }

# Substrate Pallets
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }

# Substrate Other
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }

# External Crates
futures = "0.3.21"
hex-literal = "0.3.4"
gum = { package = "tracing-gum", git = "https://github.com/paritytech/polkadot", tag = "v0.9.26" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
kvdb = "0.11.0"
kvdb-rocksdb = { version = "0.15.2", optional = true }
parity-db = { version = "0.3.13", optional = true }
async-trait = "0.1.53"
lru = "0.7"

# Polkadot
polkadot-node-core-parachains-inherent = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26" }
relay-template-client = { path = "../client", default-features = false, optional = true }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26" }
relay-template-node-primitives = { path = "../primitives" }
relay-template-rpc = { path = "../../rpc" }
polkadot-node-subsystem = {git = "https://github.com/paritytech/polkadot", tag = "v0.9.26"  }
polkadot-node-subsystem-util = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26" }
polkadot-node-subsystem-types = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26" }
polkadot-node-network-protocol = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26" }

# Polkadot Runtime Constants
relay-template-runtime-constants = { path = "../../runtime/relay-template/constants", optional = true }

# Polkadot Runtimes
relay-template-runtime = { path = "../../runtime/relay-template", optional = true }

# Polkadot Subsystems
polkadot-approval-distribution = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-availability-bitfield-distribution = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-availability-distribution = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-availability-recovery = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-collator-protocol = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-dispute-distribution = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-gossip-support = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-network-bridge = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-node-collation-generation = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-node-core-approval-voting = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-node-core-av-store = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-node-core-backing = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-node-core-bitfield-signing = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-node-core-candidate-validation = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-node-core-chain-api = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-node-core-chain-selection = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-node-core-dispute-coordinator = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-node-core-provisioner = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-node-core-pvf-checker = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-node-core-runtime-api = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }
polkadot-statement-distribution = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26", optional = true }

[dev-dependencies]
relay-template-test-client = { path = "../test/client" }
polkadot-node-subsystem-test-helpers = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26" }
env_logger = "0.9.0"
log = "0.4.17"
assert_matches = "1.5.0"

[features]
default = ["db", "full-node", "polkadot-native"]

db = [
	"service/rocksdb"
]

full-node = [
	"polkadot-node-core-av-store",
	"polkadot-node-core-approval-voting",
	"polkadot-availability-bitfield-distribution",
	"polkadot-availability-distribution",
	"polkadot-availability-recovery",
	"relay-template-client",
	"polkadot-collator-protocol",
	"polkadot-dispute-distribution",
	"polkadot-gossip-support",
	"polkadot-network-bridge",
	"polkadot-node-collation-generation",
	"polkadot-node-core-backing",
	"polkadot-node-core-bitfield-signing",
	"polkadot-node-core-candidate-validation",
	"polkadot-node-core-chain-api",
	"polkadot-node-core-chain-selection",
	"polkadot-node-core-dispute-coordinator",
	"polkadot-node-core-provisioner",
	"polkadot-node-core-runtime-api",
	"polkadot-statement-distribution",
	"polkadot-approval-distribution",
	"polkadot-node-core-pvf-checker",
	"kvdb-rocksdb",
	"parity-db",
]

# Configure the native runtimes to use. Polkadot is enabled by default.
#
# Validators require the native runtime currently
polkadot-native = [ "relay-template-runtime", "relay-template-runtime-constants", "relay-template-client/polkadot" ]

runtime-benchmarks = [
	"relay-template-runtime/runtime-benchmarks",
]
try-runtime = [
	"relay-template-runtime/try-runtime",
]
fast-runtime = [
	"relay-template-runtime/fast-runtime",
]

malus = ["full-node"]
runtime-metrics = [
	"relay-template-client/runtime-metrics",
	"relay-template-runtime/runtime-metrics",
	"polkadot-runtime-parachains/runtime-metrics"
]

staging-client = ["polkadot-node-core-provisioner/staging-client"]
