[package]
name = "relay-template-performance-test"
version = "0.9.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
thiserror = "1.0.31"
quote = "1.0.20"
env_logger = "0.9"
log = "0.4"

polkadot-node-core-pvf = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26" }
polkadot-erasure-coding = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26" }
relay-template-node-primitives = { path = "../../primitives" }

relay-template-runtime = { path = "../../../runtime/relay-template" }

[[bin]]
name = "gen-ref-constants"
path = "src/gen_ref_constants.rs"
