[package]
name = "relay-template-performance-test"
version = "0.9.26"
authors = ["Fenn Saji <fennsaji@gmail.com>"]
edition = "2021"

[dependencies]
thiserror = "1.0.31"
quote = "1.0.20"
env_logger = "0.9"
log = "0.4"

polkadot-node-core-pvf = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26" }
polkadot-erasure-coding = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26" }
polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.26" }

relay-template-runtime = { path = "../../../runtime/relay-template" }

[[bin]]
name = "gen-ref-constants"
path = "src/gen_ref_constants.rs"
