[package]
name = "remote-ext-tests-bags-list"
version = "0.9.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
polkadot-runtime = { path = "../../../runtime/polkadot" }
polkadot-runtime-constants = { path = "../../../runtime/polkadot/constants" }

pallet-bags-list-remote-tests = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }

clap = { version = "3.1", features = ["derive"] }
log = "0.4.17"
tokio = { version = "1.18.2", features = ["macros"] }
